--- a/style.css
+++ b/style.css
@@ -19,11 +19,31 @@ body{
 
 .container{
     display: grid;
-    min-height: 100vh;
+    min-height: 85vh;
     text-align: left;
     place-items: center;
     max-width: 60vh;
     padding-left: 5%;
+}
+
+.foo{
+    width: 200px;
+    height: 3px;
+    border: 1px solid rgba(0, 0, 0, 0);
+    padding-bottom: 2%;
+    background:  #F95638;
+    position: absolute;
+    top: 18%;
+}
+
+.foo2{
+    width: 10px;
+    height: 200px;
+    border: 1px solid rgba(0, 0, 0, 0);
+    padding-bottom: 2%;
+    background:  #F95638;
+    position: absolute;
+    bottom: 0;
 }
 
 nav ul {
@@ -86,13 +106,13 @@ h2{
 font-size: 2em;
 font-family: 'Cantarell', sans-serif;
 font-weight: 400;
-color: #083D77;;
+color: #083D77;
 }
 
 h3{
 font-size: 1.8em;
 font-family: 'Cantarell', sans-serif;
-color: #083D77;;
+color: #083D77;
 }
 
 p{
@@ -123,7 +143,6 @@ blockquote{
     line-height:2em;
     font-size: 0.9em;
     font-family: 'Oxygen', sans-serif;
-    font-style: italic;
     text-align: center;
     background-color: #f4d45ebd;
     max-width: 100%;
@@ -158,10 +177,10 @@ a:visited .chinatown-button{
 }
 
 .chinatown-button{
-    font-size: 1.3em;
+    font-size: 1.2em;
     font-family: 'Oxygen', sans-serif;
-    background-color: #EE964B;
-    padding: 5%;
+    background-color: #f95538a2;
+    padding: 3%;
     border-radius: 10px;
     border: 1px solid #f3e7ba;
 }
@@ -171,10 +190,10 @@ a:visited .chinatown-button{
 }
 
 .revere-button{
-    font-size: 1.3em;
+    font-size: 1.2em;
     font-family: 'Oxygen', sans-serif;
-    background-color: #EE964B;
-    padding: 5%;
+    background-color: #f95538a2;
+    padding: 3%;
     border-radius: 10px;
     border: 1px solid #f3e7ba;
 }
@@ -182,6 +201,7 @@ a:visited .chinatown-button{
 .revere-button:hover{
     background-color: #f3ba88;
 }
+
 
 
 
