--- a/styles/style.css
+++ b/styles/style.css
@@ -7,9 +7,9 @@
   box-sizing: border-box;
 }
 
-a:link { text-decoration: none; color:rgb(68, 68, 68);}
+a:link { text-decoration: none; color:rgb(248, 197, 138);}
 a:visited { text-decoration: none; color:rgb(68, 68, 68);}
-a:hover { text-decoration: none; color:rgb(68, 68, 68);}
+a:hover { text-decoration: none; color:rgb(252, 127, 69);}
 a:active { text-decoration: none; color:rgb(68, 68, 68);}
 
 body{
@@ -44,6 +44,15 @@ body{
     background:  #F95638;
     position: absolute;
     bottom: 0;
+}
+
+.foo3{
+    width: 10px;
+    height: 100px;
+    border: 1px solid rgba(0, 0, 0, 0);
+    padding-top: 2%;
+    padding-bottom: 2%;
+    background:  #F95638;
 }
 
 nav ul {
