changes to style sheet

--- a/styles/style.css
+++ b/styles/style.css
@@ -116,6 +116,7 @@ font-family: 'Cantarell', sans-serif;
 color: rgb(68, 68, 68);
 }
 
+
 h2{
 font-size: 2em;
 font-family: 'Cantarell', sans-serif;
@@ -218,5 +219,15 @@ a:visited .chinatown-button{
 
 
 
+@media only screen and (min-width: 800px){
+    h1{
+     font-size: 3.5em;
+     min-height: 100vh;
+     max-width: 100%;
+    }
 
+    p{
+        font-size: 2em;
+       }
+}
 
