--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
   box-sizing: border-box;
 }
 
-a:link { text-decoration: none; color:rgb(248, 197, 138);}
+a:link { text-decoration: none; color:rgb(68, 68, 68)}
 a:visited { text-decoration: none; color:rgb(68, 68, 68);}
 a:hover { text-decoration: none; color:rgb(252, 127, 69);}
 a:active { text-decoration: none; color:rgb(68, 68, 68);}
