--- a/styles/style.css
+++ b/styles/style.css
@@ -68,6 +68,7 @@ nav ul {
     font-family: 'Oxygen', sans-serif; 
     font-size: 0.9em;
     list-style-type: none; 
+    color:rgb(68, 68, 68);
   } 
 
 span{
