--- a/styles/style.css
+++ b/styles/style.css
@@ -218,7 +218,7 @@ a:visited .chinatown-button{
     background-color: #f3ba88;
 }
 
-div.to-ag-video{
+div.to-restaurant-video{
     padding-top: 5%;
     text-align: center;
 }
