--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,16 @@ body{
     background:  #F95638;
 }
 
+.foo4{
+    display: inline;
+    width: 10px;
+    height: 100px;
+    position: relative;
+    background:  #F95638;
+    bottom: 100%;
+    right: 60%;
+}
+
 nav ul {
     display: flex;
     flex-direction: row;
@@ -199,6 +209,10 @@ blockquote{
     max-width: 80%;
     line-height: 3em;
     margin-bottom: 5%;
+}
+
+div.cta-section > h3{
+    text-align:center;
 }
 
 .cta {
@@ -530,6 +544,10 @@ figure{
         font-size: 1.5em;
     }
 
+    h3{
+        font-size: 1.2em;
+    }
+
     nav ul {
         font-size: 0.9em;
       } 
@@ -548,7 +566,7 @@ figure{
     }
 
     blockquote{
-        font-size: 1.4em;
+        font-size: 1.3em;
     }
 
     /* restaurant specific media query */
